[gd_scene load_steps=17 format=2]

[ext_resource path="res://Screens/ScreenWithMenuElementsBlank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Music/opening_2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Screens/ScreenOpening/ScreenOpening2.gd" type="Script" id=3]
[ext_resource path="res://Ext/RequiredBG/041_1280x720.png" type="Texture" id=4]
[ext_resource path="res://Ext/RequiredBG/009_1280x720.png" type="Texture" id=5]
[ext_resource path="res://Fonts/TextFont_Large.tres" type="DynamicFont" id=6]
[ext_resource path="res://Screens/ScreenOpening/RandomizedLabel.gd" type="Script" id=7]
[ext_resource path="res://Ext/RequiredBG/014_1280x720.png" type="Texture" id=8]
[ext_resource path="res://Ext/RequiredBG/CG054_waifu2x_art_noise0_scale_tta_1.png" type="Texture" id=9]
[ext_resource path="res://Ext/RequiredBG/022_1280x720.png" type="Texture" id=10]
[ext_resource path="res://FM RepliCant Logo.png" type="Texture" id=11]
[ext_resource path="res://Ext/Scene75Res.png" type="Texture" id=12]
[ext_resource path="res://Screens/ScreenOpening/ParallaxAlt.gd" type="Script" id=13]
[ext_resource path="res://Ext/RequiredBG/064_1280x720.png" type="Texture" id=14]
[ext_resource path="res://Ext/RequiredBG/011_1280x720.png" type="Texture" id=15]
[ext_resource path="res://Graphics/AmaryllisWorks logo (doubleres).png" type="Texture" id=16]

[node name="ScreenOpening" instance=ExtResource( 1 )]
script = ExtResource( 3 )
PrevScreen = "ScreenTitleMenu"
NextScreen = "ScreenTitleMenu"
HandleRightClickAsB = true
HandlePhysicalAButton = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="." index="2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1440.0
margin_right = 1440.0
margin_bottom = 1620.0
rect_pivot_offset = Vector2( 1440, 0 )
texture = ExtResource( 14 )
stretch_mode = 7

[node name="RandomizedLabel" type="Label" parent="." index="3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -458.0
margin_top = -137.5
margin_right = 458.0
margin_bottom = -62.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "In a distant, distant future."
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="RandomizedLabel2" type="Label" parent="." index="4"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -658.5
margin_top = 62.5
margin_right = 658.5
margin_bottom = 137.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Humanity is on the brink of extinction."
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="ParallaxAlt" type="Node2D" parent="." index="5"]
visible = false
script = ExtResource( 13 )

[node name="Ground" type="Node2D" parent="ParallaxAlt" index="0"]

[node name="bg" type="Sprite" parent="ParallaxAlt/Ground" index="0"]
position = Vector2( 1, -71 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="bg2" type="Sprite" parent="ParallaxAlt/Ground" index="1"]
position = Vector2( 1928, -73 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 305, 0, 721, 584 )

[node name="Clouds" type="Sprite" parent="ParallaxAlt" index="1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 841, 1350, 336 )

[node name="tents" type="Sprite" parent="ParallaxAlt" index="2"]
position = Vector2( 2, -76 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1717, 367 )

[node name="Railing" type="Node2D" parent="ParallaxAlt" index="3"]

[node name="Sprite2" type="Sprite" parent="ParallaxAlt/Railing" index="0"]
position = Vector2( 0, 326 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 861, 1180, 1067, 181 )

[node name="Sprite3" type="Sprite" parent="ParallaxAlt/Railing" index="1"]
position = Vector2( -3, 326 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
centered = false
offset = Vector2( 1067, 0 )
region_enabled = true
region_rect = Rect2( 861, 1180, 1067, 181 )

[node name="Parallax" type="Control" parent="." index="6"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Parallax" index="0"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 7

[node name="girls" type="TextureRect" parent="." index="7"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -141.0
margin_right = 211.0
margin_bottom = 200.0
texture = ExtResource( 9 )
stretch_mode = 7

[node name="RandomizedLabel3" type="Label" parent="." index="8"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -563.5
margin_top = -137.5
margin_right = 563.5
margin_bottom = -62.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "strange beasts and clouds of ash"
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="RandomizedLabel4" type="Label" parent="." index="9"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = 62.5
margin_right = 376.0
margin_bottom = 137.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "threatened the world."
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="logo" type="TextureRect" parent="." index="10"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -580.0
margin_top = -110.0
margin_right = 580.0
margin_bottom = 110.0
texture = ExtResource( 11 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="." index="11"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -333.5
margin_top = -280.0
margin_right = 333.5
margin_bottom = -119.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer" index="0"]
margin_right = 667.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 6 )
text = "Programmed by"
align = 1

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer" index="1"]
margin_top = 95.0
margin_right = 667.0
margin_bottom = 177.0
texture = ExtResource( 16 )

[node name="kyuushou" type="TextureRect" parent="." index="12"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 7

[node name="RandomizedLabel5" type="Label" parent="." index="13"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -441.0
margin_top = -137.5
margin_right = 446.0
margin_bottom = -62.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Two girls made a promise"
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="RandomizedLabel6" type="Label" parent="." index="14"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.5
margin_top = 62.5
margin_right = 449.5
margin_bottom = 137.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "that can never be fulfilled."
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="KianaSleep2" type="TextureRect" parent="." index="15"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 7

[node name="KianaSleep" type="TextureRect" parent="." index="16"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
stretch_mode = 7

[node name="TextureRect2" type="TextureRect" parent="." index="17"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1440.0
margin_top = -1080.0
margin_right = 1440.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 1440, 0 )
texture = ExtResource( 15 )
stretch_mode = 7

[node name="RandomizedLabel7" type="Label" parent="." index="18"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -366.5
margin_top = -137.5
margin_right = 366.5
margin_bottom = -62.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "Humanity's last hope"
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01

[node name="RandomizedLabel8" type="Label" parent="." index="19"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -551.0
margin_top = 62.5
margin_right = 551.0
margin_bottom = 137.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 6 )
text = "lies in the hands of the 'savior'..."
script = ExtResource( 7 )
randomized_amount = 100
random_delay = 0.01
